--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,9 +3,11 @@
 one:
   name: MyString
   price: 1
-  image: MyString
+  image_url: MyString
+  description: MyString
 
 two:
   name: MyString
   price: 1
-  image: MyString
+  image_url: MyString
+  description: MyString
